Sidebar menu layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
-</head>
-<body>
-    Hello world!
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Andrew Ens</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="sidenav">
+      <h1 class="andrew-ens">Andrew Ens</h1>
+      <ul class="ul-no-dots">
+        <li>Portfolio</li>
+        <li>Experience</li>
+        <li>Services</li>
+      </ul>
+      <footer>
+        <a class="pill" href="https://github.com/andrewens">Made with ♥️ on GitHub</a>
+      </footer>
+    </div>
+    <div class="main">Hello world!</div>
+  </body>
 </html>
