--- a/experience.html
+++ b/experience.html
@@ -11,8 +11,8 @@
     <div class="sidenav">
       <h1><a href="index.html">Andrew Ens</a></h1>
       <ul>
-        <li class="active"><a href="index.html">Portfolio</a></li>
-        <li><a href="experience.html">Experience</a></li>
+        <li><a href="index.html">Portfolio</a></li>
+        <li class="active"><a href="experience.html">Experience</a></li>
         <li><a href="services.html">Services</a></li>
       </ul>
       <footer>
@@ -21,6 +21,6 @@
     </div>
 
     <!-- Page elements -->
-    <div class="main">Portfolio</div>
+    <div class="main">Experience</div>
   </body>
 </html>
