--- a/services.html
+++ b/services.html
@@ -11,9 +11,9 @@
     <div class="sidenav">
       <h1><a href="index.html">Andrew Ens</a></h1>
       <ul>
-        <li class="active"><a href="index.html">Portfolio</a></li>
+        <li><a href="index.html">Portfolio</a></li>
         <li><a href="experience.html">Experience</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li class="active"><a href="services.html">Services</a></li>
       </ul>
       <footer>
         <a class="pill" href="https://github.com/andrewens">Made with ♥️ on GitHub</a>
@@ -21,6 +21,6 @@
     </div>
 
     <!-- Page elements -->
-    <div class="main">Portfolio</div>
+    <div class="main">Services</div>
   </body>
 </html>
