Portfolio page layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrew Ens</title>
+    <title>Andrew Ens Portfolio</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
@@ -16,11 +16,47 @@
         <li><a href="services.html">Services</a></li>
       </ul>
       <footer>
-        <a class="pill" href="https://github.com/andrewens">Made with ♥️ on GitHub</a>
+        <a class="pill" href="https://github.com/andrewens"
+          >Made with ♥️ on GitHub</a
+        >
       </footer>
     </div>
 
     <!-- Page elements -->
-    <div class="main">Portfolio</div>
+    <div class="main">
+      <div class="separator">2024</div>
+      <div class="grid">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+      </div>
+      <div class="separator">2023</div>
+      <div class="grid">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+      </div>
+      <div class="separator">2022</div>
+      <div class="grid">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+      </div>
+    </div>
   </body>
 </html>
