Project card template

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     <div class="main">
       <div class="separator">2024</div>
       <div class="grid">
-        <div>1</div>
+        <div>
+          <img
+            src="https://i.gyazo.com/e09614e671a9efd0c05ba5a7233fe98d.gif"
+            alt="Korrupt Zombies Town Map"
+          />
+          <div class="project-card-title">Korrupt Zombies Town</div>
+        </div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
