Dynamically generate project cards from json

--- a/experience.html
+++ b/experience.html
@@ -21,6 +21,6 @@
     </div>
 
     <!-- Page elements -->
-    <div class="main">Experience</div>
+    <div id="main">Experience</div>
   </body>
 </html>
