--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrew Ens Portfolio</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script type="module" src="scripts/main.js"></script>
   </head>
   <body>
     <!-- Reused elements -->
@@ -23,8 +24,10 @@
     </div>
 
     <!-- Page elements -->
-    <div class="main">
+    <div id="main">
       <div class="separator">2024</div>
+      <!--
+      
       <div class="grid">
         <div>
           <img
@@ -40,29 +43,7 @@
         <div>6</div>
         <div>7</div>
         <div>8</div>
-      </div>
-      <div class="separator">2023</div>
-      <div class="grid">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-      </div>
-      <div class="separator">2022</div>
-      <div class="grid">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-      </div>
+      </div>  -->
     </div>
   </body>
 </html>
