--- a/services.html
+++ b/services.html
@@ -21,6 +21,6 @@
     </div>
 
     <!-- Page elements -->
-    <div class="main">Services</div>
+    <div id="main">Services</div>
   </body>
 </html>
